2002-01-22  Veronica De Santis <veron78@interfree.it>

	* icall.c : Added mapping of internal calls for Manual and Auto reset events
	* threads.c : Added the implementation of internal calls for events
	* threads.h : Added prototypes of internal calls for events
	
2002-01-21  Radek Doulik  <rodo@ximian.com>

	* icall.c (ves_icall_InitializeArray): swap bytes on big endians

2002-01-21  Dietmar Maurer  <dietmar@ximian.com>

	* class.c (mono_class_init): set min_align to 1 (instead of 0)
	(mono_class_value_size): use min_align

2002-01-20  Dick Porter  <dick@ximian.com>

	* threads.h:
	* threads.c: Replaced all instances of WapiHandle * with HANDLE,
	so it compiles on w32.

2002-01-17  Dietmar Maurer  <dietmar@ximian.com>

	* metadata.c (mono_type_stack_size): impl.

	* class.c (mono_class_get_field): impl. memberref token

2002-01-16 Veronica De Santis <veron78@@interfree.it>

        * icall.h : Added the internal calls mapping for CreateMutex_internal
	  	    and ReleaseMutex_internal.
	* threads.h : Added the prototype of mutexes internal calls.
	* threads.c : Added the implementations of mutexes internal calls.

Tue Jan 15 22:47:57 CET 2002 Paolo Molaro <lupus@ximian.com>

	* metaparse.h: removed unused file.
	* reflection.c, reflection.h: added stream_data_align () function 
	to align data in streams and keep stream aligned. Add support for
	exception support in method headers.

Tue Jan 15 19:42:50 CET 2002 Paolo Molaro <lupus@ximian.com>

	* unicode.c: make iconv_convert () return the number of bytess written
	in the output buffer.

2002-01-15  Dick Porter  <dick@ximian.com>
	* threads.c: Make the runtime's idea of infinite timeouts coincide
	with the class library's

	Fix a particularly egregious bug in mono_thread_cleanup(). That
	code was so utterly bogus it must have been written on a Monday.

Mon Jan 14 17:01:03 CET 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.h: add subtypes field to TypeBuilder.